refactor: use Stream.toList() for immutable results in file service